test/functions/deitz/test_resolve_best_shadowed2.good
test_resolve_best_shadowed2.chpl:1: In function 'main':
test_resolve_best_shadowed2.chpl:14: error: ambiguous call 'h()'
test_resolve_best_shadowed2.chpl:23: note: candidates are: h()
test_resolve_best_shadowed2.chpl:32: note:                 h()
